RESOLVED FIXED244846
REGRESSION (253727@main): [ macOS wk2 ] inspector/css/setLayoutContextTypeChangedMode.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=244846
Summary REGRESSION (253727@main): [ macOS wk2 ] inspector/css/setLayoutContextTypeCha...
Karl Rackler
Reported 2022-09-06 08:18:21 PDT
inspector/css/setLayoutContextTypeChangedMode.html This test is a flaky text failure on macOS wk2. HISTORY: https://results.webkit.org/?suite=layout-tests&test=inspector%2Fcss%2FsetLayoutContextTypeChangedMode.html&platform=mac&flavor=wk2 DIFF: @@ -37,5 +37,7 @@ Changing `#normalNonGrid` to `display: grid;`... PASS: 3 grid nodes should be instrumented. Changing `#normalNonGrid` to `display: block;`... -PASS: 2 grid nodes should be instrumented. +FAIL: 2 grid nodes should be instrumented. + Expected: 2 + Actual: 3 Reproduction Steps: I can reproduce this on 253727@main but cannot reproduce it on 253726@main or earlier. This issue can be bisected to 253727@main using the command: run-webkit-tests -f --clobber-old-results --exit-after-n-failures 1 --debug --force --debug --iterations=50 inspector/css/setLayoutContextTypeChangedMode.html
Attachments
Radar WebKit Bug Importer
Comment 1 2022-09-06 08:19:01 PDT
Karl Rackler
Comment 2 2022-09-06 08:24:01 PDT
I have marked this test as a flaky failure while this issue is investigated.
EWS
Comment 3 2022-09-06 08:30:03 PDT
Test gardening commit 254186@main (67d670b9086a): <https://commits.webkit.org/254186@main> Reviewed commits have been landed. Closing PR #4056 and removing active labels.
Patrick Angle
Comment 4 2023-01-10 10:15:37 PST
EWS
Comment 5 2023-01-12 16:15:19 PST
Committed 258858@main (33d4b1c48279): <https://commits.webkit.org/258858@main> Reviewed commits have been landed. Closing PR #8467 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.