Source/WebCore/inspector/agents/InspectorCSSAgent.cpp
@@ -1122,15 +1122,18 @@ void InspectorCSSAgent::nodesWithPendingLayoutFlagsChangeDispatchTimerFired()
             continue;
 
         auto nodeId = domAgent->boundNodeId(&node);
+        auto nodeWasPushedToFrontend = false;
         if (!nodeId && m_layoutContextTypeChangedMode == Protocol::CSS::LayoutContextTypeChangedMode::All && layoutFlagsContainLayoutContextType(layoutFlags)) {
             // FIXME: <https://webkit.org/b/189687> Preserve DOM.NodeId if a node is removed and re-added
             nodeId = domAgent->identifierForNode(node);
+            nodeWasPushedToFrontend = nodeId;
         }
         if (!nodeId)
             continue;
 
         m_lastLayoutFlagsForNode.set(node, layoutFlags);
-        m_frontendDispatcher->nodeLayoutFlagsChanged(nodeId, toProtocol(layoutFlags));
+        if (!nodeWasPushedToFrontend)
+            m_frontendDispatcher->nodeLayoutFlagsChanged(nodeId, toProtocol(layoutFlags));
     }
 }
 
